2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove [XY]-offset-callbacks add [YX]-offset
	
2005-11-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Added space-alist
	entry for time signatures after breathing signs. Bug report by
	Scott Russell.

2005-11-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[!__MINGW32__]: Bugfix: if argv0 is
	not absolute, make it absolute using PATH.

2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/midi.c (initmidi): Fix type for mingw.

2005-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/compile-vars.make (SHARED_FLAGS): Support mingw.

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): Detect mingw
	cross compiling.

	* stepmake/aclocal.m4: Support python cross compiling.

	* stepmake/stepmake/python-module-vars.make (SHARED_MODULE_SUFFIX):
	Add mingw section.

2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-lib.scm (chain-grob-member-functions): replace
	chained-callback.cc

	* lily/chained-callback.cc (Module): remove file.

	* lily/rest-collision.cc (force_shift_callback_rest): change to
	chained callback.

	* lily/rest.cc (y_offset_callback): merge function of 3 callbacks. 

	* lily/grob.cc (y_parent_positioning): remove axis argument from
	parent_positioning callbacks.
	(Grob): junk init code
	(get_offset): use generic property callbacks for
	X-offset, Y-offset. Remove Grob::{add,has}_offset_callback.
	(axis_parent_positioning): new function
	(axis_offset_symbol): new function
	(chain_offset_callback): new function
	(add_offset_callback): new function

	* lily/beam.cc (rest_collision_callback): change signature; this
	is now a chained callback.

	* lily/include/dimension-cache.hh (class Dimension_cache): remove
	callback administration.

	* lily/simple-closure.cc: new file. Smob type that allows "grob
	member functions",
