@@ -60,6 +60,7 @@ Grob::internal_set_property (SCM sym, SCM v)
   if (do_internal_type_checking_global)
     {
       if (!ly_is_procedure (v)
+	  && !is_simple_closure (v)
 	  && !type_check_assignment (sym, v, ly_symbol2scm ("backend-type?")))
 	abort ();
       check_interfaces_for_property (this, sym);
@@ -87,6 +88,7 @@ Grob::get_property_data (SCM sym) const
     {
       SCM val = scm_cdr (handle);
       if (!ly_is_procedure (val)
+	  && !is_simple_closure (val)
 	  && !type_check_assignment (sym, val, 
 				  ly_symbol2scm ("backend-type?")))
 	abort ();
