@@ -1,5 +1,13 @@
 2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/self-aligment-interface.cc (set_align_self): new function
+	(set_center_parent): new function.
+
+	* lily/side-position-interface.cc (set_axis): new function.
+
+	* lily/new-fingering-engraver.cc (position_scripts): use drul for
+	generic code. 
+
 	* scm/define-grob-properties.scm (all-user-grob-properties):
 	remove [XY]-offset-callbacks add [YX]-offset
 	
